updated lr transfer

--- a/docs/lr_transfer.ipynb
+++ b/docs/lr_transfer.ipynb
@@ -66,8 +66,8 @@
     "    \"1151de73c92c49baaa612fd2a1567ed8\"\n",
     "]\n",
     "\n",
-    "loss_data = get_loss_data(model_270m_task_ids)\n",
-    "plot_loss_data(loss_data, plot_last=1000)"
+    "loss_data_270m = get_loss_data(model_270m_task_ids)\n",
+    "plot_loss_data(loss_data_270m, plot_last=1000)"
    ]
   },
   {
@@ -105,8 +105,29 @@
     "    \"8ba8cdbca4094bab8a458e9416fc97be\",\n",
     "]\n",
     "\n",
-    "loss_data = get_loss_data(model_1b_task_ids)\n",
-    "plot_loss_data(loss_data, plot_last=750)"
+    "loss_data_1b = get_loss_data(model_1b_task_ids)\n",
+    "plot_loss_data(loss_data_1b, plot_last=750)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Final loss for each model.\n",
+    "\n",
+    "### Model Type: 270M\n",
+    "| Model                              | Loss     |\n",
+    "|------------------------------------|----------|\n",
+    "| 270m, base 37m SP w/ fully aligned exponents and optimal constants  | 2.72389  |\n",
+    "| 270m, base 37m muP                            | 2.73995  |\n",
+    "| 270m SP                                       | 2.78688  |\n",
+    "\n",
+    "### Model Type: 1B\n",
+    "| Model                              | Loss     |\n",
+    "|------------------------------------|----------|\n",
+    "| 1b, base 37m SP w/ fully aligned exponents and optimal constants      | 2.47100  |\n",
+    "| 1b, base 37m muP                               | 2.48275  |\n",
+    "| 1b SP                                          | 2.49312  |"
    ]
   },
   {
