fix 1b link label

--- a/docs/lr_transfer.ipynb
+++ b/docs/lr_transfer.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "At 1B, parameter scaling approaches only surpassed baseline SP in the final 10k steps, with fully aligned exponent scaling maintaining superior performance.\n",
     "\n",
-    "[Interactable 270m model comparison plots](https://app.clear.ml/projects/*/compare-experiments;ids=b9044d8fd148453ab592d8839615f78f,95b1306d3bf243a4a601d41f2fd40760,8ba8cdbca4094bab8a458e9416fc97be/scalars/graph)\n",
+    "[Interactable 1b model comparison plots](https://app.clear.ml/projects/*/compare-experiments;ids=b9044d8fd148453ab592d8839615f78f,95b1306d3bf243a4a601d41f2fd40760,8ba8cdbca4094bab8a458e9416fc97be/scalars/graph)\n",
     "\n",
     "**Note:** Interactive plots require a ClearML account.\n",
     "\n"
